hphp/hack/test/typecheck/enum_class/enum_class_this_ref.php.rust_elab.exp
File "enum_class_this_ref.php", line 6, characters 17-21:
Variable `$this` is undefined, or not always defined. (Naming[2050])
File "enum_class_this_ref.php", line 5, characters 12-15:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
